# seminar-2022-django-assignment4

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
DjangoRender/: .gitignore  manage.py
DjangoRender/DjangoRender/: asgi.py  settings.py  urls.py  wsgi.py
assignment4/: asgi.py  settings.py  urls.py  wsgi.py
blog/: requirements.txt
blog/blog/: settings.py  urls.py
django-cron/: .gitignore  README.md
django-cron/renderDjango/: asgi.py  settings.py  urls.py  wsgi.py
djangoDeploy/: manage.py
djangoDeploy/djangoDeploy/: asgi.py  settings.py  urls.py  views.py  wsgi.py
djangoRender/: .env  .gitignore  requirements.txt
djangoRender/djangoRender/: settings.py  urls.py  wsgi.py
django_render/: manage.py  requirements.txt
django_render/django_render/: asgi.py  settings.py  urls.py  wsgi.py
djangorender/: .gitignore  manage.py  requirements.txt
djangorender/cronjob/: apps.py
djangorender/djangorender/: asgi.py  settings.py  urls.py  wsgi.py
gohome/: apps.py
hello/: settings.py  urls.py
hello/hello/: settings.py
hello/templates/: index.html
mysite/: build.sh  settings.py  urls.py
mysite/mysite/: settings.py
mysite/render/: views.py
problem1/: .gitignore  manage.py  requirements.txt
problem1/config/: asgi.py  settings.py  urls.py  wsgi.py
problem1/problem1/: asgi.py  settings.py  urls.py  wsgi.py
render/: manage.py  requirement.txt  views.py
renderDjango/: asgi.py  settings.py  urls.py  wsgi.py
renderPractice/: manage.py  requirements.txt
testDjangoWithRender/: README.md  manage.py
(+37 files in other folders)
