[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["catnip033 <henry11n@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.2"
django = "^4.1.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
