[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Ah Yeon Kim <cathy1918@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
django = "^4.1.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
